--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -8,6 +8,16 @@
       "friction": 0.2
     },
     "fixedTimeStep": 0.0166667,
-    "maxSubSteps": 1
+    "maxSubSteps": 1,
+    "collisionGroups": [
+      {
+        "index": 1,
+        "name": "RaycastMesh"
+      }
+    ],
+    "collisionMatrix": {
+      "0": 1,
+      "1": 0
+    }
   }
 }
